# SDF-Modelica

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml
C/include/: ModelicaSDFFunctions.h
C/src/: ModelicaSDFFunctions.c  dsres.cpp
C/tests/: ModelicaSDF_test.cpp  test.sdf
SDF/: NDTable.mo  TimeTable.mo  libraryinfo.mos  package.mo
SDF/Examples/: InterpolationMethods.mo  Playback.mo  TabledDiode.mo  package.mo
SDF/Functions/: attachScale.mo  createGroup.mo  getAttributeString.mo  getTableDataSize.mo  getTimeSeriesSize.mo  makeDatasetDouble.mo  makeDatasetDouble1D.mo  makeDatasetDouble2D.mo  makeDatasetInteger.mo  makeDatasetInteger1D.mo  makeDatasetInteger2D.mo  package.mo  readDatasetDouble.mo  readDatasetDouble1D.mo  readDatasetDouble2D.mo  readDatasetInteger.mo  readDatasetInteger1D.mo  readDatasetInteger2D.mo  readTableData.mo  readTimeSeries.mo  setAttributeString.mo
SDF/Internal/: package.mo
SDF/Internal/Functions/: attachScale.mo  createGroup.mo  getAttributeString.mo  getAttributeStringLength.mo  getDatasetDims.mo  getTableDataSize.mo  getTimeSeriesSize.mo  internalGetAttributeStringLength.mo  makeDatasetDouble.mo  makeDatasetDouble1D.mo  makeDatasetDouble2D.mo  makeDatasetInteger.mo  makeDatasetInteger1D.mo  makeDatasetInteger2D.mo  package.mo  readDatasetDouble.mo  readDatasetDouble1D.mo  readDatasetDouble2D.mo  readDatasetInteger.mo  readDatasetInteger1D.mo  readDatasetInteger2D.mo  readTableData.mo  readTimeSeries.mo  setAttributeString.mo
SDF/Types/: ExternalNDTable.mo  ExtrapolationMethod.mo  InterpolationMethod.mo  package.mo
